# IMPACT

./: .gitignore  AGENTS.md  CLAUDE.md  HOOKS.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  interfaces.md  testing.md
impact/: __init__.py
impact/communication/: __init__.py  base_comm.py  mmap_comm.py  shm_comm.py
impact/envs/: __init__.py  base_env.py  virmen_env.py
impact/envs/virmen/: util.py  virmen.py
test/: OpenLoop1D.ipynb  image.mmap  position.mmap  setting.json  test_env.m
