[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impact"
version = "0.1.0"
description = "Reinforcement learning environment for VirMEn with shared memory communication"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Hoyeon Jang"},
]
dependencies = [
    "numpy",
    "gymnasium",
]

[project.urls]
Repository = "https://github.com/hoyeon912/IMPACT"

[tool.setuptools.packages.find]
include = ["impact*"]
